updated page classes

--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -1,4 +1,4 @@
-<article id="halo4-service-record" class="halo-4">
+<article id="halo4-service-record" class="halo-4 service-record-header">
 	<%= render 'halo4/partials/service_record_header' %>
 
 	<div class="experience-bar" data-spy="affix" data-offset-top="540">
