--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -16,8 +16,8 @@
 					Service Record
 				</div>
 				<div class="row">
-					<div class="col-lg-5">
-						<div class="player-rank col-md-12 no-p">
+					<div class="col-lg-5 row">
+						<div class="player-rank col-md-12">
 							<% progression_percent = rank_progression_percentage() %>
 							<div class="current-rank pull-left">
 								SR <%= @service_record['rankName'] %>
