Added custom titles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Branch</title>
+	<title><%= @title %></title>
 	<%= csrf_meta_tags %>
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
