fixed padding in areas on service record

--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -154,7 +154,7 @@
 							<div class="key">Playtime</div>
 						</div>
 					</div>
-					<div class="favourite-variant col-md-3 no-p">
+					<div class="favourite-variant col-md-3">
 						<div class="title">Favourite Variant</div>
 						<div class="variant-icon" style="background-image: url('<%= resolve_asset_url(war_games_stats['favoriteVariant']['imageUrl'], 'large') %>');"></div>
 						<hr />
@@ -254,7 +254,7 @@
 					Customs Games Stats
 				</div>
 				<div class="row">
-					<div class="favourite-variant col-md-3 no-p">
+					<div class="favourite-variant col-md-3">
 						<div class="title">Favourite Variant</div>
 						<div class="variant-icon" style="background-image: url('<%= resolve_asset_url(custom_games_stats['favoriteVariant']['imageUrl'], 'large') %>');"></div>
 						<hr />
