--- a/app/assets/stylesheets/styles/halo_4/service_record.scss
+++ b/app/assets/stylesheets/styles/halo_4/service_record.scss
@@ -183,6 +183,80 @@
 				}
 			}
 
+			&#campaign-stats {
+				> .row {
+					> .mode-stats > .stat {
+						text-align: center;
+						padding-left: 25px;
+						padding-right: 25px;
+						margin-bottom: 56px;
+
+						> div {
+							padding: 10px;
+						}
+
+						> .value {
+							font-size: 35px;
+							font-weight: 300;
+							color: $brand-accent-primary;
+						}
+						> .key {
+							font-size: 15px;
+							font-weight: 600;
+							background-color: rgba($brand-accent-primary, 0.1);
+						}
+					}
+
+					> .mission-progression {
+						> .title {
+							color: $brand-accent-primary;
+							font-weight: 300;
+							font-size: 25px;
+							text-align: center;
+						}
+
+						.progressions {
+							text-align: center;
+
+							> .col-md-12 {
+								font-size: 25px;
+								font-weight: 300;
+								color: $brand-accent-tertiary;
+
+								margin-bottom: 15px;
+							}
+
+							> .progression {
+								padding-left: 10px;
+								padding-right: 10px;
+								margin-bottom: 15px;
+
+								> div:not(.tooltip) {
+									padding: 10px;
+								}
+
+								> .value {
+									// background-color: rgba(lightslategrey, 0.6);
+
+									> .value-image {background-position: center;
+										background-repeat: no-repeat;
+										background-size: 80px;
+
+										width: 100%;
+										height: 120px;
+									}
+								}
+								> .key {
+									font-size: 13px;
+									font-weight: 600;
+									background-color: rgba($brand-accent-primary, 0.1);
+								}
+							}
+						}
+					}
+				}
+			}
+
 			&#spartan-ops-stats {
 				> .row {
 					> .mode-stats > .stat {
