--- a/app/views/partials/_experience_bar.html.erb
+++ b/app/views/partials/_experience_bar.html.erb
@@ -4,7 +4,7 @@
 			<a href="#xbox-live">
 				<div class="flair">
 					<h4>Xbox Live</h4>
-					<span><%= @identity['gamertag'] %></span>
+					<span class="hidden-sm hidden-xs"><%= @identity['gamertag'] %></span>
 				</div>
 			</a>
 		</div>
@@ -12,7 +12,7 @@
 			<a data-popover-content="#halo-explorer" data-toggle="popover" data-trigger="focus" tabindex="0">
 				<div class="col-xs-10 flair">
 					<h4>Halo</h4>
-					<span><%= @identity['gamertag'] %></span>
+					<span class="hidden-sm hidden-xs"><%= @identity['gamertag'] %></span>
 				</div>
 				<div class="col-xs-2 dropdown-selector">
 					<i class="fa fa-chevron-down" aria-hidden="true"></i>
@@ -53,7 +53,7 @@
 			<a href="#destint">
 				<div class="flair">
 					<h4>Destiny</h4>
-					<span><%= @identity['gamertag'] %></span>
+					<span class="hidden-sm hidden-xs"><%= @identity['gamertag'] %></span>
 				</div>
 			</a>
 		</div>
@@ -61,7 +61,7 @@
 			<a data-popover-content="#titanfall-explorer" data-toggle="popover" data-trigger="focus" tabindex="1">
 				<div class="col-xs-10 flair">
 					<h4>Titanfall</h4>
-					<span><%= @identity['gamertag'] %></span>
+					<span class="hidden-sm hidden-xs"><%= @identity['gamertag'] %></span>
 				</div>
 				<div class="col-xs-2 dropdown-selector">
 					<i class="fa fa-chevron-down" aria-hidden="true"></i>
