--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -33,8 +33,7 @@
 									SR <%= @service_record['nextRankName'] %>
 								<% end %>
 							</div>
-							<div class="clearfix">
-							</div>
+							<div class="clearfix"></div>
 							<div class="progress-bar-container">
 								<div class="progress-bar" role="progressbar" aria-valuenow="<%= progression_percent %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progression_percent %>%;">
 									<%= progression_percent %>%<%= rank_progression_comparison() %>
