fixed shitty graph on the md view

--- a/app/views/halo4/service_record/service_record.html.erb
+++ b/app/views/halo4/service_record/service_record.html.erb
@@ -53,7 +53,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
+					<div class="col-lg-3 hidden-sm hidden-xs hidden-md">
 						<canvas id="played-games-spread" width="400" height="400"></canvas>
 					</div>
 					<div class="col-lg-4">
