--- a/app/assets/stylesheets/styles/halo4/home.scss
+++ b/app/assets/stylesheets/styles/halo4/home.scss
@@ -11,5 +11,6 @@ article.halo-4 {
 }
 
 @import 'header.scss';
-@import 'service_record.scss';
+@import 'service_record/service_record.scss';
+@import 'matches/recent_matches.scss';
 
