--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,6 +17,7 @@ $text-grey: #999;
 $text-dark: #1b1b1b;
 
 $seperator-light: #eee;
+$seperator-medium: #ddd;
 
 $extra-small-devices-width: 480px;
 $small-devices-width: 768px;
@@ -38,7 +39,7 @@ $large-devices-width: 1200px;
 @import 'base/navbar.scss';
 
 @import 'styles/home.scss';
-@import 'styles/halo_4/home.scss';
+@import 'styles/halo4/home.scss';
 
 * {
 	font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
