--- a/app/assets/stylesheets/styles/halo4/service_record/service_record.scss
+++ b/app/assets/stylesheets/styles/halo4/service_record/service_record.scss
@@ -230,19 +230,18 @@
 								padding-left: 10px;
 								padding-right: 10px;
 								margin-bottom: 15px;
+								min-width: 100px !important;
 
 								> div:not(.tooltip) {
 									padding: 10px;
 								}
 
 								> .value {
-									// background-color: rgba(lightslategrey, 0.6);
-
+									// min-width: 100px !important;
 									> .value-image {background-position: center;
 										background-repeat: no-repeat;
 										background-size: 80px;
 
-										width: 100%;
 										height: 120px;
 									}
 								}
@@ -295,8 +294,11 @@
 								&:last-of-type { margin-bottom: auto; }
 
 								> span {
-									overflow: none;
+									overflow: hidden;
+									white-space: nowrap;
 									text-overflow: ellipsis;
+									display: inline-block;
+
 									font-weight: 300;
 									font-size: 18px;
 									color: $brand-accent-primary;
