--- a/app/views/halo4/service_record/index.html.erb
+++ b/app/views/halo4/service_record/index.html.erb
@@ -170,7 +170,7 @@
 							</div>
 							<div class="stat col-md-6">
 								<div class="value"><%= number_with_delimiter(war_games_stats['totalGamesStarted']) %></div>
-								<div class="key">Games Staretd</div>
+								<div class="key">Games Started</div>
 							</div>
 							<div class="stat col-md-6">
 								<div class="value"><%= war_games_stats['totalDuration'] %></div>
@@ -187,6 +187,33 @@
 					Campaign Stats
 				</div>
 				<div class="row">
+					<div class="mode-stats col-md-9">
+						<div class="stat col-md-4">
+							<div class="value"><%= calculate_kd_ratio(campaign_stats['totalKills'], campaign_stats['totalDeaths']) %></div>
+							<div class="key">Kill/Death Ratio</div>
+						</div>
+						<div class="stat col-md-4">
+							<div class="value"><%= number_with_delimiter(campaign_stats['totalKills']) %></div>
+							<div class="key">Total Kills</div>
+						</div>
+						<div class="stat col-md-4">
+							<div class="value"><%= number_with_delimiter(campaign_stats['totalDeaths']) %></div>
+							<div class="key">Total Deaths</div>
+						</div>
+
+						<div class="stat col-md-4">
+							<div class="value"><%= number_with_delimiter(campaign_stats['totalGamesStarted']) %></div>
+							<div class="key">Total Games Started</div>
+						</div>
+						<div class="stat col-md-4">
+							<div class="value"><%= number_with_delimiter(campaign_stats['totalTerminalsVisited']) %></div>
+							<div class="key">Terminals Visited</div>
+						</div>
+						<div class="stat col-md-4">
+							<div class="value"><%= campaign_stats['totalDuration'] %></div>
+							<div class="key">Playtime</div>
+						</div>
+					</div>
 					<div class="mission-progression col-md-3">
 						<div class="title">Mission Progression</div>
 						<hr />
@@ -220,33 +247,6 @@
 								</div>
 								<div class="key">Coop (LASO)</div>
 							</div>
-						</div>
-					</div>
-					<div class="mode-stats col-md-9">
-						<div class="stat col-md-4">
-							<div class="value"><%= calculate_kd_ratio(campaign_stats['totalKills'], campaign_stats['totalDeaths']) %></div>
-							<div class="key">Kill/Death Ratio</div>
-						</div>
-						<div class="stat col-md-4">
-							<div class="value"><%= number_with_delimiter(campaign_stats['totalKills']) %></div>
-							<div class="key">Total Kills</div>
-						</div>
-						<div class="stat col-md-4">
-							<div class="value"><%= number_with_delimiter(campaign_stats['totalDeaths']) %></div>
-							<div class="key">Total Deaths</div>
-						</div>
-
-						<div class="stat col-md-4">
-							<div class="value"><%= number_with_delimiter(campaign_stats['totalGamesStarted']) %></div>
-							<div class="key">Total Games Started</div>
-						</div>
-						<div class="stat col-md-4">
-							<div class="value"><%= number_with_delimiter(campaign_stats['totalTerminalsVisited']) %></div>
-							<div class="key">Terminals Visited</div>
-						</div>
-						<div class="stat col-md-4">
-							<div class="value"><%= campaign_stats['totalDuration'] %></div>
-							<div class="key">Playtime</div>
 						</div>
 					</div>
 				</div>
@@ -318,31 +318,6 @@
 					Customs Games Stats
 				</div>
 				<div class="row">
-					<div class="favourite-variant col-md-3">
-						<div class="title">Favourite Variant</div>
-						<div class="variant-icon" style="background-image: url('<%= resolve_asset_url(custom_games_stats['favoriteVariant']['imageUrl'], 'large') %>');"></div>
-						<hr />
-
-						<div class="col-md-12 row no-mp">
-							<div class="col-md-12"><%= custom_games_stats['favoriteVariant']['name'] %></div>
-							<div class="stat col-md-6">
-								<div class="value"><%= number_with_delimiter(custom_games_stats['totalKills']) %></div>
-								<div class="key">Total Kills</div>
-							</div>
-							<div class="stat col-md-6">
-								<div class="value"><%= number_with_delimiter(custom_games_stats['totalDeaths']) %></div>
-								<div class="key">Total Deaths</div>
-							</div>
-							<div class="stat col-md-6">
-								<div class="value"><%= number_with_delimiter(custom_games_stats['totalGamesStarted']) %></div>
-								<div class="key">Games Staretd</div>
-							</div>
-							<div class="stat col-md-6">
-								<div class="value"><%= custom_games_stats['totalDuration'] %></div>
-								<div class="key">Playtime</div>
-							</div>
-						</div>
-					</div>
 					<div class="mode-stats col-md-9">
 						<div class="stat col-md-4">
 							<div class="value"><%= custom_games_stats['kdRatio'] %></div>
@@ -383,12 +358,37 @@
 							<div class="key">Playtime</div>
 						</div>
 					</div>
+					<div class="favourite-variant col-md-3">
+						<div class="title">Favourite Variant</div>
+						<div class="variant-icon" style="background-image: url('<%= resolve_asset_url(custom_games_stats['favoriteVariant']['imageUrl'], 'large') %>');"></div>
+						<hr />
+
+						<div class="col-md-12 row no-mp">
+							<div class="col-md-12"><%= custom_games_stats['favoriteVariant']['name'] %></div>
+							<div class="stat col-md-6">
+								<div class="value"><%= number_with_delimiter(custom_games_stats['totalKills']) %></div>
+								<div class="key">Total Kills</div>
+							</div>
+							<div class="stat col-md-6">
+								<div class="value"><%= number_with_delimiter(custom_games_stats['totalDeaths']) %></div>
+								<div class="key">Total Deaths</div>
+							</div>
+							<div class="stat col-md-6">
+								<div class="value"><%= number_with_delimiter(custom_games_stats['totalGamesStarted']) %></div>
+								<div class="key">Games Staretd</div>
+							</div>
+							<div class="stat col-md-6">
+								<div class="value"><%= custom_games_stats['totalDuration'] %></div>
+								<div class="key">Playtime</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 		</div>
 
 		<div class="col-md-2">
-			<nav class="sidebar" <%#data-spy="affix" data-offset-top="100"%>>
+			<nav class="sidebar hidden-sm hidden-xs" data-spy="affix" data-offset-top="567">
 				<%= render 'halo4/partials/sidebar' %>
 			</nav>
 		</div>
@@ -400,8 +400,8 @@
 	<script>
 		// Setup Recent Matches data
 		const recentMatches = <%== generate_recent_match_json() %>;
-		<% match_images = Array.new(@recent_matches.length) %>
-		<% @recent_matches['games'].each_with_index do |match, index| %>
+		<% match_images = Array.new(@header_matches.length) %>
+		<% @header_matches['games'].each_with_index do |match, index| %>
 			<% match_images[index] = resolve_asset_url(match['mapImageUrl'], 'large') %>
 		<% end %>
 		const recentMatchImages = <%== match_images.to_json %>;
