Started adding match UI

--- a/app/views/halo4/matches/partials/_service_record_header.html.erb
+++ b/app/views/halo4/matches/partials/_service_record_header.html.erb
@@ -1,4 +1,4 @@
-<div class="header" style="background-image: url('<%= resolve_asset_url(@match['game']['mapImageUrl'], 'large') %>');">
+<div class="header" style="background-image: url('<%= most_recent_match_image() %>');">
 	<div class="fading-branch-mask">
 		<div class="fluid-container">
 			<div class="col-md-12 recent-match-index">
