--- a/views/halo4/service-record/index.hbs
+++ b/views/halo4/service-record/index.hbs
@@ -18,25 +18,24 @@
 				<div class="row">
 					<div class="col-lg-5 row">
 						<div class="player-rank col-md-12">
-							<% progression_percent = rank_progression_percentage() %>
 							<div class="current-rank pull-left">
-								SR <%= @serviceRecord['rankName'] %>
+								SR {{ serviceRecord.rankName }}
 								<span class="xp">
-									<%= @serviceRecord['rankStartXp'] %> xp
+									{{ serviceRecord.rankStartXp }} xp
 								</span>
 							</div>
 							<div class="next-rank pull-right">
-								<% if @serviceRecord['nextRankName'] != '' %>
+								{{#if serviceRecord.nextRankName}}
 									<span class="xp">
-										<%= @serviceRecord['nextRankStartXp'] %> xp
+										{{ numberWithDelim serviceRecord.nextRankStartXp }} xp
 									</span>
-									SR <%= @serviceRecord['nextRankName'] %>
-								<% end %>
+									SR {{ serviceRecord.nextRankName }}
+								{{/if}}
 							</div>
 							<div class="clearfix"></div>
 							<div class="progress-bar-container">
-								<div class="progress-bar" role="progressbar" aria-valuenow="<%= progression_percent %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progression_percent %>%;">
-									<%= progression_percent %>%<%= rank_progression_comparison() %>
+								<div class="progress-bar" role="progressbar" aria-valuenow="{{ percentages.rankProgression }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ percentages.rankProgression }}%;">
+									{{ percentages.rankProgression }}%{{ rankProgressionComparison }}
 								</div>
 							</div>
 						</div>
@@ -181,35 +180,34 @@
 			</section>
 
 			<section id="campaign-stats">
-				<% campaign_stats = @serviceRecord['gameModes'].detect { |m| m['id'] == 4 } %>
 				<div class="section-header">
 					Campaign Stats
 				</div>
 				<div class="row">
 					<div class="mode-stats col-md-9">
 						<div class="stat col-md-4">
-							<div class="value"><%= calculate_kd_ratio(campaign_stats['totalKills'], campaign_stats['totalDeaths']) %></div>
+							<div class="value">{{ calculateKdRatio modeStats.campaign.totalKills modeStats.campaign.totalDeaths }}</div>
 							<div class="key">Kill/Death Ratio</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(campaign_stats['totalKills']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.campaign.totalKills }}</div>
 							<div class="key">Total Kills</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(campaign_stats['totalDeaths']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.campaign.totalDeaths }}</div>
 							<div class="key">Total Deaths</div>
 						</div>
 
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(campaign_stats['totalGamesStarted']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.campaign.totalGamesStarted }}</div>
 							<div class="key">Total Games Started</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(campaign_stats['totalTerminalsVisited']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.campaign.totalTerminalsVisited }}</div>
 							<div class="key">Terminals Visited</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= campaign_stats['totalDuration'] %></div>
+							<div class="value">{{ modeStats.campaign.totalDuration }}</div>
 							<div class="key">Playtime</div>
 						</div>
 					</div>
@@ -219,30 +217,26 @@
 
 						<div class="progressions col-md-12 row no-mp">
 							<div class="progression col-md-6">
-								<% asset, opacity, status = completion_difficulty_info(campaign_stats['singlePlayerDifficulty']) %>
-								<div class="value" data-toggle="tooltip" data-placement="top" title="<%= status %>">
-									<div class="value-image" style="background-image: url('<%= asset %>'); opacity: <%= opacity %>;"></div>
+								<div class="value" data-toggle="tooltip" data-placement="top" title="{{ h4DifficultyName modeStats.campaign.singlePlayerDifficulty }}">
+									<div class="value-image" style="background-image: url('{{ h4DifficultyAsset modeStats.campaign.singlePlayerDifficulty 'large' }}');"></div>
 								</div>
 								<div class="key">Single Player</div>
 							</div>
 							<div class="progression col-md-6">
-								<% asset, opacity, status = completion_difficulty_info(campaign_stats['coopDifficulty']) %>
-								<div class="value" data-toggle="tooltip" data-placement="top" title="<%= status %>">
-									<div class="value-image" style="background-image: url('<%= asset %>'); opacity: <%= opacity %>;"></div>
+								<div class="value" data-toggle="tooltip" data-placement="top" title="{{ h4DifficultyName modeStats.campaign.coopDifficulty }}">
+									<div class="value-image" style="background-image: url('{{ h4DifficultyAsset modeStats.campaign.coopDifficulty 'large' }}');"></div>
 								</div>
 								<div class="key">Coop</div>
 							</div>
 							<div class="progression col-md-6">
-								<% asset, opacity, status = completion_difficulty_info(campaign_stats['singlePlayerDASO']) %>
-								<div class="value" data-toggle="tooltip" data-placement="top" title="<%= status %>">
-									<div class="value-image" style="background-image: url('<%= asset %>'); opacity: <%= opacity %>;"></div>
+								<div class="value" data-toggle="tooltip" data-placement="top" title="{{ h4DifficultyName modeStats.campaign.singlePlayerDASO }}">
+									<div class="value-image" style="background-image: url('{{ h4DifficultyAsset modeStats.campaign.singlePlayerDASO 'large' }}');"></div>
 								</div>
 								<div class="key">Single Player (LASO)</div>
 							</div>
 							<div class="progression col-md-6">
-								<% asset, opacity, status = completion_difficulty_info(campaign_stats['coopDASO']) %>
-								<div class="value" data-toggle="tooltip" data-placement="top" title="<%= status %>">
-									<div class="value-image" style="background-image: url('<%= asset %>'); opacity: <%= opacity %>;"></div>
+								<div class="value" data-toggle="tooltip" data-placement="top" title="{{ h4DifficultyName modeStats.campaign.coopDASO }}">
+									<div class="value-image" style="background-image: url('{{ h4DifficultyAsset modeStats.campaign.coopDASO 'large' }}');"></div>
 								</div>
 								<div class="key">Coop (LASO)</div>
 							</div>
@@ -252,35 +246,34 @@
 			</section>
 
 			<section id="spartan-ops-stats">
-				<% spartan_ops_stats = @serviceRecord['gameModes'].detect { |m| m['id'] == 5 } %>
 				<div class="section-header">
 					Spartan Ops Stats
 				</div>
 				<div class="row">
 					<div class="mode-stats col-md-9">
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(calculate_kd_ratio(spartan_ops_stats['totalKills'], spartan_ops_stats['totalDeaths'])) %></div>
+							<div class="value">{{ calculateKdRatio modeStats.spartanOps.totalKills modeStats.spartanOps.totalDeaths }}</div>
 							<div class="key">Kill/Death Ratio</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(spartan_ops_stats['totalKills']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.spartanOps.totalKills }}</div>
 							<div class="key">Total Kills</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(spartan_ops_stats['totalDeaths']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.spartanOps.totalDeaths }}</div>
 							<div class="key">Total Deaths</div>
 						</div>
 
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(spartan_ops_stats['totalMedals']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.spartanOps.totalMedals }}</div>
 							<div class="key">Total Medals</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(spartan_ops_stats['totalGamesStarted']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.spartanOps.totalGamesStarted }}</div>
 							<div class="key">Total Games Started</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= spartan_ops_stats['totalDuration'] %></div>
+							<div class="value">{{ modeStats.spartanOps.totalDuration }}</div>
 							<div class="key">Playtime</div>
 						</div>
 					</div>
@@ -289,20 +282,18 @@
 						<hr />
 						<div class="progressions col-md-12 row no-mp">
 							<div class="progression col-md-12">
-								<% sp_completion = generate_percentage(spartan_ops_stats['totalSinglePlayerMissionsCompleted'], spartan_ops_stats['totalMissionsPossible']) %>
 								<span>Single Player Mission Progression</span>
 								<div class="progress-bar-container">
-									<div class="progress-bar" role="progressbar" aria-valuenow="<%= sp_completion %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= sp_completion %>%;">
-										<%= sp_completion %>% (<%= spartan_ops_stats['totalSinglePlayerMissionsCompleted'] %>/<%= spartan_ops_stats['totalMissionsPossible'] %>)
+									<div class="progress-bar" role="progressbar" aria-valuenow="{{ percentages.spartanOpsSpCompletion }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ percentages.spartanOpsSpCompletion }}%;">
+										{{ percentages.spartanOpsSpCompletion }}% ({{ modeStats.spartanOps.totalSinglePlayerMissionsCompleted }}/{{ modeStats.spartanOps.totalMissionsPossible }})
 									</div>
 								</div>
 							</div>
 							<div class="progression col-md-12">
-								<% coop_completion = generate_percentage(spartan_ops_stats['totalCoopMissionsCompleted'], spartan_ops_stats['totalMissionsPossible']) %>
 								<span>Coop Mission Progression</span>
 								<div class="progress-bar-container">
-									<div class="progress-bar" role="progressbar" aria-valuenow="<%= coop_completion %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= coop_completion %>%;">
-										<%= coop_completion %>% (<%= spartan_ops_stats['totalCoopMissionsCompleted'] %>/<%= spartan_ops_stats['totalMissionsPossible'] %>)
+									<div class="progress-bar" role="progressbar" aria-valuenow="{{ percentages.spartanOpsCoopCompletion }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ percentages.spartanOpsCoopCompletion }}%;">
+										{{ percentages.spartanOpsCoopCompletion }}% ({{ modeStats.spartanOps.totalCoopMissionsCompleted }}/{{ modeStats.spartanOps.totalMissionsPossible }})
 									</div>
 								</div>
 							</div>
@@ -312,72 +303,71 @@
 			</section>
 
 			<section id="custom-games-stats">
-				<% custom_games_stats = @serviceRecord['gameModes'].detect { |m| m['id'] == 6 } %>
 				<div class="section-header">
 					Customs Games Stats
 				</div>
 				<div class="row">
 					<div class="mode-stats col-md-9">
 						<div class="stat col-md-4">
-							<div class="value"><%= custom_games_stats['kdRatio'] %></div>
+							<div class="value">{{ modeStats.customGames.kdRatio }}</div>
 							<div class="key">Kill/Death Ratio</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(custom_games_stats['averagePersonalScore']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.customGames.averagePersonalScore }}</div>
 							<div class="key">Average Personal Score</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(custom_games_stats['totalKills']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.customGames.totalKills }}</div>
 							<div class="key">Total Kills</div>
 						</div>
 
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(custom_games_stats['totalDeaths']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.customGames.totalDeaths }}</div>
 							<div class="key">Total Deaths</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(custom_games_stats['totalGamesStarted']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.customGames.totalGamesStarted }}</div>
 							<div class="key">Total Games Started</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(custom_games_stats['totalGamesWon']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.customGames.totalGamesWon }}</div>
 							<div class="key">Total Games Won</div>
 						</div>
 
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(custom_games_stats['totalGamesCompleted']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.customGames.totalGamesCompleted }}</div>
 							<div class="key">Total Games Completed</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= numberWithDelim(custom_games_stats['totalGameBaseVariantMedals']) %></div>
+							<div class="value">{{ numberWithDelim modeStats.customGames.totalGameBaseVariantMedals }}</div>
 							<div class="key">Mode Base Medals</div>
 						</div>
 						<div class="stat col-md-4">
-							<div class="value"><%= custom_games_stats['totalDuration'] %></div>
+							<div class="value">{{ modeStats.customGames.totalDuration }}</div>
 							<div class="key">Playtime</div>
 						</div>
 					</div>
 					<div class="favourite-variant col-md-3">
 						<div class="title">Favourite Variant</div>
-						<div class="variant-icon" style="background-image: url('<%= resolve_asset_url(custom_games_stats['favoriteVariant']['imageUrl'], 'large') %>');"></div>
+						<div class="variant-icon" style="background-image: url('{{ h4ResolveAsset modeStats.customGames.favoriteVariant.imageUrl 'large' }}');"></div>
 						<hr />
 
 						<div class="col-md-12 row no-mp">
-							<div class="col-md-12"><%= custom_games_stats['favoriteVariant']['name'] %></div>
+							<div class="col-md-12">{{ modeStats.customGames.favoriteVariant.name }}</div>
 							<div class="stat col-md-6">
-								<div class="value"><%= numberWithDelim(custom_games_stats['totalKills']) %></div>
+								<div class="value">{{ numberWithDelim modeStats.customGames.totalKills }}</div>
 								<div class="key">Total Kills</div>
 							</div>
 							<div class="stat col-md-6">
-								<div class="value"><%= numberWithDelim(custom_games_stats['totalDeaths']) %></div>
+								<div class="value">{{ numberWithDelim modeStats.customGames.totalDeaths }}</div>
 								<div class="key">Total Deaths</div>
 							</div>
 							<div class="stat col-md-6">
-								<div class="value"><%= numberWithDelim(custom_games_stats['totalGamesStarted']) %></div>
+								<div class="value">{{ numberWithDelim modeStats.customGames.totalGamesStarted }}</div>
 								<div class="key">Games Staretd</div>
 							</div>
 							<div class="stat col-md-6">
-								<div class="value"><%= custom_games_stats['totalDuration'] %></div>
+								<div class="value">{{ modeStats.customGames.totalDuration }}</div>
 								<div class="key">Playtime</div>
 							</div>
 						</div>
