--- a/js/apps/web-placeholder/src/Components/App/index.scss
+++ b/js/apps/web-placeholder/src/Components/App/index.scss
@@ -73,7 +73,7 @@
 
 	@media (max-width: 767.98px) {
 		> .container {
-			background: linear-gradient(to bottom, rgba(61,61,124,0) 0%,rgba(61,61,124,1) 40%,rgba(61,61,124,1) 50%,rgba(61,61,124,1) 60%,rgba(61,61,124,0) 100%);
+			background: linear-gradient(to bottom, rgba(61,61,124,0) 0%,rgba(61,61,124,.9) 40%,rgba(61,61,124,.9) 50%,rgba(61,61,124,.9) 60%,rgba(61,61,124,0) 100%);
 
 			> .content {
 				text-align: center;
